feat: enhance documentation and examples for Recall.ai integration, including new event handling and CLI commands

--- a/apps/docs/content/docs/cli/commands.mdx
+++ b/apps/docs/content/docs/cli/commands.mdx
@@ -224,7 +224,8 @@ better-webhook run github-push \
 
 <Callout type="info">
   If no `--secret` is provided, the CLI will look for provider-specific
-  environment variables like `GITHUB_WEBHOOK_SECRET` or `RAGIE_WEBHOOK_SECRET`.
+  environment variables like `GITHUB_WEBHOOK_SECRET`,
+  `RAGIE_WEBHOOK_SECRET`, or `RECALL_WEBHOOK_SECRET`.
 </Callout>
 
 ---
