--- a/apps/docs/content/docs/cli/index.mdx
+++ b/apps/docs/content/docs/cli/index.mdx
@@ -96,7 +96,7 @@ The fastest way to get started is with the dashboard command, which starts both 
   <Step>
     ### Point Webhooks to the Capture Server
 
-    Configure your webhook source (GitHub, Ragie, etc.) to send webhooks to:
+    Configure your webhook source (GitHub, Ragie, Recall.ai, etc.) to send webhooks to:
 
     ```
     http://localhost:3001/webhooks/your-provider
