--- a/apps/docs/content/docs/sdk/adapters.mdx
+++ b/apps/docs/content/docs/sdk/adapters.mdx
@@ -525,7 +525,7 @@ When verifying signatures, the SDK looks for a secret in this order:
 
 1. **Adapter options** — `toNextJS(webhook, { secret: "..." })`
 2. **Provider options** — `github({ secret: "..." })`
-3. **Environment variables** — `GITHUB_WEBHOOK_SECRET`, `RAGIE_WEBHOOK_SECRET`, or `WEBHOOK_SECRET`
+3. **Environment variables** — `GITHUB_WEBHOOK_SECRET`, `RAGIE_WEBHOOK_SECRET`, `RECALL_WEBHOOK_SECRET`, or `WEBHOOK_SECRET`
 
 If the provider requires verification and no secret is found, the request is
 rejected (typically `401`). Verification is skipped only when the provider is
