--- a/apps/docs/content/docs/sdk/index.mdx
+++ b/apps/docs/content/docs/sdk/index.mdx
@@ -11,7 +11,7 @@ import { Callout } from "fumadocs-ui/components/callout";
 
 The Better Webhook SDK provides type-safe webhook handlers with automatic signature verification. It consists of:
 
-- **Provider packages** — Type definitions and schemas for webhook sources (GitHub, Ragie)
+- **Provider packages** — Type definitions and schemas for webhook sources (GitHub, Ragie, Recall.ai)
 - **Adapter packages** — Framework integrations (Next.js, Hono, Express, NestJS, GCP Cloud Functions)
 - **Core package** — Base functionality for custom providers
 
@@ -324,7 +324,7 @@ Signature verification happens automatically when you provide a secret. The SDK 
 
 1. **Adapter options** — Pass `secret` to the adapter function
 2. **Provider options** — Pass `secret` when creating the provider
-3. **Environment variables** — Automatically checks `GITHUB_WEBHOOK_SECRET`, `RAGIE_WEBHOOK_SECRET`, etc.
+3. **Environment variables** — Automatically checks `GITHUB_WEBHOOK_SECRET`, `RAGIE_WEBHOOK_SECRET`, `RECALL_WEBHOOK_SECRET`, etc.
 
 ```ts
 // Option 1: Adapter options
@@ -430,5 +430,5 @@ export const POST = toNextJS(webhook, {
 
 ## Next Steps
 
-- [Providers](/docs/sdk/providers) — GitHub and Ragie provider documentation with all supported events
+- [Providers](/docs/sdk/providers) — GitHub, Ragie, and Recall.ai provider documentation with all supported events
 - [Adapters](/docs/sdk/adapters) — Framework-specific setup and configuration
