--- a/apps/docs/content/docs/cli/index.mdx
+++ b/apps/docs/content/docs/cli/index.mdx
@@ -143,7 +143,7 @@ better-webhook capture --port 3001
 better-webhook captures list
 
 # Replay a captured webhook
-better-webhook replay abc12345 http://localhost:3000/api/webhooks/github
+better-webhook captures replay abc12345 http://localhost:3000/api/webhooks/github
 ```
 
 ## Using Templates
